<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sh_card_primary_bg_8dp"
    android:minWidth="@dimen/dialog_minWidth"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enableGps"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/_tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/enableGpsDesc"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_size_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_tv_title" />

    <TextView
        android:id="@+id/tv_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:text="@string/yes"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_tv_description" />

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="8dp"
        android:text="@string/no"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_7"
        app:layout_constraintStart_toEndOf="@id/tv_yes"
        app:layout_constraintTop_toBottomOf="@id/_tv_description" />


</androidx.constraintlayout.widget.ConstraintLayout>