<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center">

    <include
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuide"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/addressTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/addressTxt" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/cityTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cityTxt" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/createdAtTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/createdAtTxt" />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/addressTxt"
        app:layout_constraintEnd_toStartOf="@id/addressTxt"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toTopOf="@+id/addressTxt"
        tools:text="@string/address" />

    <TextView
        android:id="@+id/addressTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/address"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <TextView
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/cityTxt"
        app:layout_constraintEnd_toStartOf="@id/cityTxt"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toTopOf="@id/cityTxt"
        tools:text="@string/city" />

    <TextView
        android:id="@+id/cityTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/city"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/addressTxt" />

    <TextView
        android:id="@+id/createdAt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/createdAtTxt"
        app:layout_constraintEnd_toStartOf="@id/createdAtTxt"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toTopOf="@+id/createdAtTxt"
        tools:text="@string/createdAt" />

    <TextView
        android:id="@+id/createdAtTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/createdAt"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/cityTxt" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/showOnMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:minHeight="55dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:padding="0dp"
        android:text="@string/showOnMap"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/viewsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cityTxt,createdAtTxt,addressTxt,showOnMap" />


    <com.mfahimi.nearbyplace.ui.view.LoadingView
        android:id="@+id/loadingView"
        style="@style/LoadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:backgroundValue="WHITE"
        app:lv_enableBackground="true"
        app:lv_noView="false"
        tools:ignore="MissingConstraints"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>